# dual-conditioning

./: .gitignore  .zenodo.json  CHANGELOG.md  CHANGELOG_PHASE4_PHASE5.md  CITATION.cff  FILE_MANIFEST.txt  LICENSE  MANIFESTS.md  Makefile  README.md  REPOSITORY_TREE.txt  REPRODUCE.md  SHA256SUMS.txt  THIRD_PARTY.md  VALIDATION_REPORT.md  environment-cpu.yml  environment.yml  pyproject.toml  setup_diffsbdd.sh
config/: paths.example.env
configs/: evaluation_frozen.yaml  evaluation_reaudit.yaml  exp06_generation.yaml
data/: README.md
docs/: AUDIT_DECISIONS.md  CODE_REVIEW_FINDINGS.md  DATA_LAYOUT.md  FIGURE_PROVENANCE.md  FIGURE_REPRODUCTION.md  FIGURE_SCRIPT_SELECTION.tsv  PAPER_CODE_MAP.md  RELEASE_CHECKLIST.md  VALIDATION_REPORT.md
figures/: figstyle.py  make_figure1_task_protocol_connectivity.py  make_figure2_single_step_expansion.py  make_figure3_fixed_increment_summary.py  make_figure4_violin_distributions.py  make_figure5_AB_plane.py  run_all.sh
jobs/: campaign1_fixed_increment.slurm  campaign2_beam.slurm  single_shot_lambda_sweep.slurm  single_step_expansion.slurm  softmask_beam.slurm
patches/: 0001-add-inference-time-shape-guidance.patch  0002-add-inference-compatibility-fallbacks.patch  README.md
reproduce/: setup_paths.sh  verify_adaptive_search.py  verify_diffsbdd_patch.py  verify_figures.py  verify_numbers.py  verify_smoke.py
reproducibility/: README.md
results/: README.md
tests/: README.md  conftest.py  test_atom_matching.py  test_config.py  test_connectivity.py  test_phase4_beam_logic.py  test_shape_metrics.py  test_softmask_core.py  (+4 more)
(+178 files in other folders)
