[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-conditioning"
version = "0.2.0"
description = "Connectivity-aware evaluation of hard-local and soft-global conditioning in 3D molecular diffusion"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ismael Castañón"}]
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "rdkit>=2023.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
guidance = ["torch>=2.1"]
figures = ["pandas>=2.0", "matplotlib>=3.7", "Pillow>=9.5"]
test = ["pytest>=7.4", "torch>=2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
